--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -71,7 +71,7 @@
   commentstyle=\color{mygreen},
   extendedchars=true,
   frame=single,
-  keepspaces=true,
+  keepspaces=false,
   keywordstyle=\color{blue},
   language=Java,
   numbers=left,
